--- a/css/style.css
+++ b/css/style.css
@@ -117,12 +117,8 @@ nav a:hover {
   color: #3A2E26;
   transform: scale(1.05);
 }
-
-body.index nav a[href="index.html"],
-body.om-oss nav a[href="om-oss.html"],
-body.recept nav a[href="recept.html"],
-body.recept-glass nav a[href="recept-glass.html"],
-body.skicka-in nav a[href="skicka-in.html"] {
+  
+nav a.active{
   border: 2px solid #FFBFA3;
   background-color: #FFBFA3;
   color: #fff;
@@ -220,7 +216,7 @@ a {
   gap: 20px;
 }
 
-.receptlista h2 {
+.receptlista h2,h3{
   width: 100%;
   text-align: center;
   margin-bottom: 10px;
